frontend/style.css
[v-cloak] {
  display: none;
}

html, body {
  --text-color: #495057;
  --text-color-secondary: #6c757d;
  --primary-color: #2196F3;
  --primary-color-text: #ffffff;
  --hover-background-color: #e9ecef;
  --font-family: Roboto;

  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: var(--font-family);
  font-weight: 400;
  color: var(--text-color);
  overflow: hidden;
}

a {
  color: var(--primary-color);
  text-decoration: none;
}

a:hover {
  color: var(--text-color-secondary);
}

#app {
  height: 100%;
  overflow: hidden;
}

.main-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    overflow: hidden;
}

.main-container-toolbar {
    border-bottom: solid 1px #e6e6e6;
}

.main-container-body {
    display: flex;
    overflow: hidden;
    width: 100%;
    justify-content: center;
    flex-grow: 1;
}

.main-container-content {
    overflow: scroll;
    flex-grow: 1;
    padding: 0 10px;
}

.main-container-footer {
    display: flex;
    padding: 10px;
    background-color: #f8f9fa;
    justify-content: center;
}

.p-breadcrumb {
    padding: 0.5rem;
    border: none;
}

.p-toolbar {
    border: none;
}

.p-progressbar {
    flex-grow: 1;
}

/* show them correctly in dialogs */
.p-tooltip, .p-confirm-popup {
    z-index: 1000;
}

.p-dialog .p-dialog-content {
    padding: 5px 1.5rem 1.5rem 1.5rem;
}

.p-menu.p-menu-overlay {
    margin-top: 5px;
}

.p-button.p-button-icon-only.p-button-rounded {
    height: unset;
}

.p-button:focus, .p-inputtext:enabled:focus {
    box-shadow: none;
}

.p-toolbar {
    border-radius: 0;
}

